--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
 						</picture>
 					</div>
 				</div>
+				<div class="hero-arrow">
+					<a href="#chatbots">
+						<img
+							src="./assets/images/arrow-right.svg"
+							width="100"
+							height="100"
+							alt=""
+						/>
+					</a>
+				</div>
 			</section>
 			<section id="chatbots">
 				<h2 class="chatbots-title">our chatbots</h2>
@@ -311,8 +321,16 @@
 					</div>
 					<div class="cta-btn">
 						<a href="#steps"
-							><span>find out how it's done</span><span>⬇</span></a
-						>
+							><span>find out how it's done</span
+							><span>
+								<img
+									class="approach-arrow"
+									src="./assets/images/arrow-right.svg"
+									width="100"
+									height="100"
+									alt=""
+								/> </span
+						></a>
 					</div>
 				</div>
 			</section>
